KAF-528: Address PR comments and sonar issues